---------------------------------------------------------------------------------------------------
Version: 1.0.11
Date: ????
  Bugfixes:
    - Fix crash when GUI was opened after being closed in some way that didn't trigger the on_gui_closed event
---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 2021-11-20
  Changes:
    - Add missing holmium ingot to SE+K2 preset
  Bugfixes:
    - Import-export window now gets a scrollbar instead of expanding beyond the screen for large milestone lists
    - Fix issues with multiple forces, where new forces could have completion times from existing forces, and players switching forces could erase completion times. This fixes issues with Editor Extensions's testing lab mode.
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 2021-10-17
  Bugfixes:
    - Fix issue where the completion time for technology milestones was not being saved properly. If you had completed technology milestones, updating to this version will allow you to enter those lost times yourself.
    - Fix crash when going to settings after removing the mod that was currently selected as preset.
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2021-10-03
  Bugfixes:
    - Fix crash when right-clicking an item selector in the settings menu
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2021-08-29
  Features:
    - Add preset addon for Bio Industries (Thanks to snouz!)
    - Add preset addon for Omnienergy and Omniscience (Thanks to NihlisticPandemonium!)
  Bugfixes:
    - Fix crash that could occur in some cases in multiplayer
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2021-08-03
  Bugfixes: