@@ -3,6 +3,7 @@ Version: 1.0.11
 Date: ????
   Bugfixes:
     - Fix crash when GUI was opened after being closed in some way that didn't trigger the on_gui_closed event
+    - Fix crash when using the import feature, introduced in 1.0.10
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.10
 Date: 2021-11-20
